Update README with new instructions and screenshots